@@ -1,3 +1,8 @@
+2003-03-24  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* StrongNameKeyPairTest.cs: Converted to NUnit2 format. Removed
+	unneeded code and false comments (too much copy-n-paste).
+
 2003-03-09  Jackson Harper  <jackson@ximian.com>
 
 	* AssemblyAlgorithmIdAttributeTest.cs:
